# chessBackend

./: .gitignore  Cargo.toml  book.ron  deploy.sh  genProto  match-results.md  pgo_train.sh  search_test_with_mods_no_eval.rs  todo.md
.cargo/: config.toml
benches/: eval_benches.rs  search_benches.rs
book/: Cargo.toml
book/src/: lib.rs
book_builder/: Cargo.toml
book_builder/src/: lumbras.rs  main.rs  utils.rs
engine/: Cargo.toml  testout
engine/benches/: bench_engine_main.rs  eval_benches.rs  search_benches.rs
engine/src/: ai_search.rs  consts.rs  debug.rs  final_search.rs  lib.rs  search.rs  search_test.rs  search_wip.rs  searching.rs  traditional_search.rs
engine/src/evaluation/: ai_eval.rs  basic_eval.rs  mod.rs
engine/src/tables/: mod.rs
nnue/: Cargo.toml
nnue/.cargo/: config.toml
nnue/src/: accumulator.rs  constants.rs  feature_transformer.rs  half_ka_v2_hm.rs  halfkp.rs  layer.rs  lib.rs  math_vec.rs  nnue.rs  nnue_misc.rs  nnue_utils.rs  serde_extension.rs
nnue/src/accumulator/: accumulator.rs  mod.rs
nnue/src/feature_sets/: half_ka_v2_hm.rs  mod.rs
nnue/src/layers/: affine.rs  affine_sparse.rs  clipped_relu.rs  mod.rs  sq_clipped_relu.rs
nnue/src/vectors/: mod.rs  vec_ops_avx2.rs
pleco/: Cargo.toml
pleco/benches/: bench_main.rs
pleco/src/: lib.rs
pleco/src/board/: mod.rs
pleco/src/bots/: mod.rs
pleco/src/core/: sq.rs
pleco/src/tools/: tt.rs
pleco/tests/: test.rs
src/: lib.rs  main.rs  test_fens.rs  test_ops.rs
src/processing/: board_evaluator.rs  board_handles.rs  consts.rs  debug.rs  evaluator.rs  mod.rs  new_handles.rs  piece_evaluators.rs  piece_handles.rs  position_handles.rs  processor.rs  searching.rs  todo.md
src/processing/evaluation/: basic_eval.rs  mod.rs
src/processing/tables/: material.rs  pawn_table.rs
src/proto/: chess.proto  common.proto
