[package]
name = "chessBackend"
version = "0.1.0"
edition = "2021"
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
once_cell = "1.17.0"
pleco = "0.5.0"
protobuf = "3.7.1"
rand = "0.8.5"

[profile.test]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1


[[bin]]
name = "chess_engine"
path = "src/main.rs"

[lib]
name = "chess_lib"
bench = true
path = "src/lib.rs"


[dev-dependencies]
criterion = {  version = '0.2.10', default-features = false }

[[bench]]
name = "bench_engine_main"
harness = false
