[package]
name = "chessBackend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
pleco = {path="../Pleco/pleco"}
engine = { path = "engine" }

[profile.test]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1


[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1


[[bin]]
name = "chess_engine"
path = "src/main.rs"

[lib]
name = "chess_lib"
path = "src/lib.rs"
