[package]
name = "chessBackend"
version = "0.1.0"
edition = "2021"
default-run = "chess_engine"

[workspace]
members = ["book", "book_builder", "engine", "nnue", "pleco"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
pleco = {path = "pleco" }
book = {path = "book" }
engine = { path = "engine" }
rand = "0.9.2"

[profile.test]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
incremental = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1


[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1


[[bin]]
name = "chess_engine"
path = "src/main.rs"

[[bin]]
name = "engine_pgo"
path = "src/bin/engine_pbo.rs"

