[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pleco = {path="../pleco"}
nnue = {path = "../nnue" }
lazy_static = "1.5.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
incremental = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1

[[bench]]
name = "bench_engine_main"
harness = false