[package]
name = "pleco"
version = "0.5.0"
autobenches = false

include = [
    "src/*",
    "tests/*.rs",
    "Cargo.toml",
    ".gitignore",
    "README.md",
]

[lib]
name = "pleco"
path = "src/lib.rs"
doctest = true

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "unwind"
codegen-units = 1
lto = "fat"

[profile.bench]
opt-level = 3
debug = false
lto = "fat"
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 4


[dependencies]
bitflags = "1.3.2"
rand = "0.8.5"
rayon = "1.5.3"
num_cpus = "1.13.1"
mucow = "0.1.0"
lazy_static = "1.4.0"

[features]
default = []
nightly = []

[dev-dependencies]
criterion = { version = '0.2.10', default-features = false}

[[bench]]
name = "bench_main"
harness = false
